implements business object

--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -3,6 +3,7 @@ header.logout=Logout
 adminpage.header.text=Administration Tools
 mainpage.header.text=Main Page
 simplesearch.header.text=Simple search
+sendstuffpage.header.text=Send stuff
 
 #Admin page labels:
 adminpage.label.name=User Name
