--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
@@ -3,6 +3,7 @@ header.logout=Выход
 adminpage.header.text=Настройка приложения
 mainpage.header.text=Главная страница
 simplesearch.header.text=Быстрый поиск
+sendstuffpage.header.text=Отправить материал
 
 #Admin page labels:
 adminpage.label.name=User Name
