Stuff state page. Stuff history page. update code to business objects. partly implementing working with current flow table.

--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -4,6 +4,7 @@ adminpage.header.text=Administration Tools
 mainpage.header.text=Main Page
 simplesearch.header.text=Simple search
 sendstuffpage.header.text=Send stuff
+stuff.header.text=Stuff Page
 
 #Admin page labels:
 adminpage.label.name=User Name
@@ -39,3 +40,11 @@ common.searchcriteria=Search criteria
 stufftype.otkaz=otkaz
 stufftype.private=private
 stufftype.administr=administr
+
+stuffstate.OK=OK
+stuffstate.WRONG_PLACE=wronge place
+stuffstate.NOT_CREATED=not created
+stuffstate.CONTAIN_SIMBOLS=contain symbols
+stuffstate.REPEAT=repeat
+stuffstate.UNCHECKED=unchecked
+stuffstate.UNDEFINED=undefined state
