--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
@@ -4,6 +4,7 @@ adminpage.header.text=Настройка приложения
 mainpage.header.text=Главная страница
 simplesearch.header.text=Быстрый поиск
 sendstuffpage.header.text=Отправить материал
+stuff.header.text=История материала
 
 #Admin page labels:
 adminpage.label.name=User Name
@@ -40,3 +41,11 @@ common.searchcriteria=Критерии поиска
 stufftype.otkaz=отказной
 stufftype.private=ДЧО
 stufftype.administr=административный
+
+stuffstate.OK=OK
+stuffstate.WRONG_PLACE=неправильное место
+stuffstate.NOT_CREATED=не создан
+stuffstate.CONTAIN_SIMBOLS=содержит симовлы
+stuffstate.REPEAT=повтор
+stuffstate.UNCHECKED=не проверен
+stuffstate.UNDEFINED=состояние не определено
