add HistoryBO, change and i18n stuff page

--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -25,6 +25,9 @@ sendstuffpage.label.senddate=Send date
 sendstuffpage.label.sign=Sign
 sendstuffpage.label.submit=Process
 
+stuffpage.currentplace=Current place
+stuffpage.history=History
+
 validation.error.addnewuser.lastname.empty=Last Name must be not empty
 validation.error.addnewuser.name.empty=Name must be not empty
 validation.error.addnewuser.password.length=Password must be 6 or more simbols
@@ -36,6 +39,16 @@ common.stuffnumber=Stuff N
 common.year=Year
 common.stufftype=Stuff Type
 common.searchcriteria=Search criteria
+common.tableheader.recipient=Recipient
+common.tableheader.sender=Sender
+common.tableheader.outgoingNo=OutgoingNo
+common.tableheader.outgoingDate=OutgoingDate
+common.tableheader.signature=Signature
+common.tableheader.description=Description
+common.tableheader.stuffnumber=Stuff No
+common.tableheader.stufftype=Type
+common.tableheader.year=Year
+common.tableheader.user=User
 
 stufftype.otkaz=otkaz
 stufftype.private=private
