--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
@@ -25,6 +25,9 @@ sendstuffpage.label.senddate=Send date
 sendstuffpage.label.sign=Sign
 sendstuffpage.label.submit=Process
 
+stuffpage.currentplace=Текущее место
+stuffpage.history=История
+
 validation.error.addnewuser.lastname.empty=Last Name must be not empty
 validation.error.addnewuser.name.empty=Name must be not empty
 validation.error.addnewuser.password.length=Password must be 6 or more simbols
@@ -36,6 +39,16 @@ common.stuffnumber=Номер материала
 common.year=Год
 common.stufftype=Тип материала
 common.searchcriteria=Критерии поиска
+common.tableheader.recipient=Получатель
+common.tableheader.sender=Отправитель
+common.tableheader.outgoingNo=Исх. номер
+common.tableheader.outgoingDate=Дата исх.
+common.tableheader.signature=Подпись
+common.tableheader.description=Описание
+common.tableheader.stuffnumber=№ материала
+common.tableheader.stufftype=Тип
+common.tableheader.year=Год
+common.tableheader.user=Пользователь
 
 
 stufftype.otkaz=отказной
