Simple search page i18n

--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -5,6 +5,7 @@ mainpage.header.text=Main Page
 simplesearch.header.text=Simple search
 sendstuffpage.header.text=Send stuff
 stuff.header.text=Stuff Page
+stuff.header.text=Stuff Page
 
 #Admin page labels:
 adminpage.label.name=User Name
@@ -27,6 +28,8 @@ sendstuffpage.label.submit=Process
 
 stuffpage.currentplace=Current place
 stuffpage.history=History
+
+simplesearchpage.searchcriteria=Search criteria
 
 validation.error.addnewuser.lastname.empty=Last Name must be not empty
 validation.error.addnewuser.name.empty=Name must be not empty
