--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
@@ -7,11 +7,11 @@ sendstuffpage.header.text=Отправить материал
 stuff.header.text=История материала
 
 #Admin page labels:
-adminpage.label.name=User Name
-adminpage.label.password=Password
-adminpage.label.firstname=First Name
-adminpage.label.lastname=Last Name
-adminpage.label.role=Role
+adminpage.label.name=Логин
+adminpage.label.password=Пароль
+adminpage.label.firstname=Имя
+adminpage.label.lastname=Фамилия
+adminpage.label.role=Роль
 adminpage.label.actions=Actions
 
 sendstuffpage.label.preparestuffs=Prepare Stuffs:
@@ -27,6 +27,8 @@ sendstuffpage.label.submit=Process
 
 stuffpage.currentplace=Текущее место
 stuffpage.history=История
+
+simplesearchpage.searchcriteria=Критерии поиска.
 
 validation.error.addnewuser.lastname.empty=Last Name must be not empty
 validation.error.addnewuser.name.empty=Name must be not empty
