implement part of the advanced search

--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -5,7 +5,8 @@ mainpage.header.text=Main Page
 simplesearch.header.text=Simple search
 sendstuffpage.header.text=Send stuff
 stuff.header.text=Stuff Page
-stuff.header.text=Stuff Page
+searchpage.header.text=Advanced search
+searchresultpage.header.text=Search Result
 
 #Admin page labels:
 adminpage.label.name=User Name
