--- a/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
+++ b/stuff-mvc/src/main/webapp/WEB-INF/i18n/messages_ru.properties
@@ -5,6 +5,8 @@ mainpage.header.text=Главная страница
 simplesearch.header.text=Быстрый поиск
 sendstuffpage.header.text=Отправить материал
 stuff.header.text=История материала
+searchpage.header.text=Расширенный поиск
+searchresultpage.header.text=Результаты поиска
 
 #Admin page labels:
 adminpage.label.name=Логин
